Ensure browse images align horizontally when one item has longer name

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,7 +22,7 @@
     @apply text-primrose-600 text-2xl py-2 px-4
   }
   .item-card {
-    @apply bg-primrose-600 border-primrose-500 border-solid border-4 border-t-primrose-400 border-b-primrose-800 rounded-3xl flex flex-col w-full p-2 hover:cursor-pointer bg-opacity-50 border-opacity-50
+    @apply bg-primrose-600 border-primrose-500 border-solid border-4 border-t-primrose-400 border-b-primrose-800 rounded-3xl flex flex-col w-full p-2 hover:cursor-pointer bg-opacity-50 border-opacity-50 justify-between
   }
   .bottom-tray {
     @apply flex gap-6 fixed bottom-0 w-full left-0 right-0 p-6 bg-ikigai-200 z-thumb
